fix jumpy counter text

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -173,6 +173,7 @@ section.countdown .timer .group .text {
 section.countdown .timer .group .value {
     font-size: 4rem;
     font-weight: 700;
+    font-variant-numberic: tabular-nums;
 }
 
 section.disclaimer {
